add edit post feature

--- a/devblog/devblog/client/src/pages/styles/home.css
+++ b/devblog/devblog/client/src/pages/styles/home.css
@@ -13,16 +13,12 @@ section:root {
     text-align: center;
 }
 
-.update-video>button {
-    display: inline;
+.update-video * {
+    padding-right: 5px;
 }
 
 .update-video {
-    width: 80%;
-}
-
-.update-video>input {
-    width: 50%;
+    display: flex;
 }
 
 .youtube-video {
