--- a/devblog/devblog/client/src/pages/styles/signUp.css
+++ b/devblog/devblog/client/src/pages/styles/signUp.css
@@ -10,10 +10,10 @@
     color: red;
 }
 
-.sign-up-container input {
+/* .sign-up-container input {
     background-color: #0d1116;
     color: white;
-}
+} */
 
 .sign-up-container label {
     color: white;
