add signup prompt to home page

--- a/devblog/devblog/client/src/components/styles/post.css
+++ b/devblog/devblog/client/src/components/styles/post.css
@@ -3,10 +3,11 @@
 }
 
 .post {
-    width: 90%;
-    margin-bottom: 1.5em;
     border-radius: .5em;
+    margin: auto;
+    margin-bottom: 1.5em;
     padding: 1em;
+    width: 90%;
 }
 
 .post>div {
