--- a/devblog/devblog/client/src/components/styles/navbar.css
+++ b/devblog/devblog/client/src/components/styles/navbar.css
@@ -11,8 +11,8 @@
 
 .nav-drop-down {
     display: flex;
-    margin-right: 20px;
     flex-direction: column;
+    margin-right: 20px;
     z-index: 20;
 }
 
@@ -42,12 +42,12 @@
 }
 
 .nav-links {
+    background-color: var(--background-secondary);
+    flex-direction: column;
     margin-top: 70px;
     padding: 10px 10px 10px 10px;
-    right: 2px;
     position: fixed;
-    background-color: rgb(26, 32, 41);
-    flex-direction: column;
+    right: 2px;
 }
 
 .nav-accounts {
@@ -78,19 +78,3 @@
     font-size: 38px;
     padding: 5px;
 }
-
-/* @media(max-width: 450px) {
-    .logo {
-        font-size: 25px;
-    }
-} */
-
-/* @media(max-width: 450px) {
-    .nav-icon {
-        font-size: 50px;
-    }
-
-    .nav-links {
-        margin-top: 50px;
-    }
-} */
