--- a/devblog/devblog/client/src/components/styles/post.css
+++ b/devblog/devblog/client/src/components/styles/post.css
@@ -1,7 +1,3 @@
-.create-post-btn {
-    margin-bottom: 1em;
-}
-
 .post {
     border-radius: .5em;
     margin: auto;
@@ -33,7 +29,9 @@
 }
 
 .show-all-comments-btn {
-    padding: 8px;
+    margin-top: 5;
+    padding: 12;
+    width: 100%;
 }
 
 img {
@@ -44,12 +42,4 @@ img {
 
 .description {
     margin: auto;
-}
-
-@media (max-width: 800px) {
-
-    .description,
-    .post {
-        width: 100%;
-    }
 }
