--- a/devblog/devblog/client/src/pages/styles/about.css
+++ b/devblog/devblog/client/src/pages/styles/about.css
@@ -5,26 +5,21 @@
     align-items: center;
 }
 
+.about>ul {
+    list-style-type: none;
+}
+
 .about>ul>li {
     font-size: 20px;
+    opacity: .8;
     padding-bottom: 30px;
 }
 
-.about>img {
-    width: 50%;
+.about>ul>li:hover {
+    opacity: 1;
 }
 
-/* @media(max-width: 500px) {
-    .about {
-        flex-direction: column;
-    }
-
-    .about>ul {
-        align-self: left;
-        order: 2;
-    }
-
-    .about>img {
-        width: 95%;
-    }
-} */
+.about>img {
+    border-radius: 2px;
+    width: 50%;
+}
