--- a/client/src/components/styles/post.css
+++ b/client/src/components/styles/post.css
@@ -3,12 +3,17 @@
     margin: auto;
     margin-bottom: 1.5em;
     padding: 1em;
-    width: 53%;
+    width: 70%;
 }
 
 .post>div {
     margin: auto;
     width: 95%;
+}
+
+.img-container {
+    display: flex;
+    justify-content: center;
 }
 
 .hide-comment:nth-child(n + 6) {
