--- a/client/src/components/styles/carousel.css
+++ b/client/src/components/styles/carousel.css
@@ -8,15 +8,13 @@
     background-color: inherit;
     font-size: 2em;
     opacity: .8;
+    border: 1px solid red;
 }
 
-/* .img-container>button:first {
-    margin-left: 30;
+.img-container img {
+    border-radius: .5em;
+    width: 100%;
 }
-
-.img-container>button:last {
-    margin-right: 30;
-} */
 
 .img-container>.inactive-btn {
     opacity: .3;
