--- a/client/src/pages/styles/home.css
+++ b/client/src/pages/styles/home.css
@@ -22,6 +22,27 @@ section:root {
     text-decoration: none;
 }
 
+.subscribe-prompt {
+    font-size: 20px;
+    margin: 100px auto 100px auto;
+    padding: 15px;
+    text-align: center;
+    width: fit-content;
+}
+
+.subscribe-prompt form {
+    display: flex;
+    margin-top: 5px;
+}
+
+.subscribe-prompt button {
+    background-color: var(--background-secondary);
+}
+
+.subscribe-prompt button:hover {
+    background-color: var(--button-hover);
+}
+
 .update-video * {
     padding-right: 5px;
 }
